added docker, make file updated, small refactoring
