# internal/service/http/rrd_service/aerospike_service.go
@@ -11,6 +11,7 @@ import (
 	"github.com/lissdx/aerospike-ha/internal/pkg/process"
 	"github.com/spf13/viper"
 	"net/http"
+	"time"
 )
 
 var _ process.Processor = (*RrdServer)(nil)
@@ -26,7 +27,7 @@ const (
 
 type RrdServer struct {
 	logger     logger.ILogger
-	Driver     *cache.AerospikeDriver
+	AsDriver   *cache.AerospikeDriver
 	echoServer *echo.Echo
 	host       string
 	port       int
@@ -34,7 +35,7 @@ type RrdServer struct {
 
 func (r *RrdServer) GetMetrics(ctx echo.Context, params rrdServerGen.GetMetricsParams) error {
 
-	getRes, err := r.Driver.GetMetrics((*string)(params.Type), params.Start, params.End, params.MaxFetch)
+	getRes, err := r.AsDriver.GetMetrics((*string)(params.Type), params.Start, params.End, params.MaxFetch)
 	if err != nil {
 		r.logger.Error(fmt.Errorf("cannot process requested fetch metrics error %w", err))
 		res := rrdServerGen.BadRequest{
@@ -46,22 +47,16 @@ func (r *RrdServer) GetMetrics(ctx echo.Context, params rrdServerGen.GetMetricsP
 	}
 
 	if len(getRes) <= 0 {
-		res := rrdServerGen.NotFound{
-			Msg:    "not found",
-			Detail: fmt.Sprintf("there is no result for the given query params"),
-			Status: int(responseCodeNotFound),
-		}
-
-		return ctx.JSON(http.StatusNotFound, res)
+		return ctx.JSON(http.StatusNoContent, getRes)
 	}
 
-	res := getRes
-
-	return ctx.JSON(http.StatusOK, res)
+	return ctx.JSON(http.StatusOK, getRes)
 
 }
 
 func (r *RrdServer) PutMetrics(ctx echo.Context) error {
+
+	// fetch request body
 	var metricsData rrdServerGen.MetricsData
 	err := ctx.Bind(&metricsData)
 
@@ -69,7 +64,7 @@ func (r *RrdServer) PutMetrics(ctx echo.Context) error {
 		return fmt.Errorf("cannot bind metrics data: %w", err)
 	}
 
-	// metricsData.Timestamp should be presented
+	// metricsData.Timestamp should be greater than 0
 	if metricsData.Timestamp <= 0 {
 		bResp := rrdServerGen.BadRequest{
 			Status: int(responseCodeBadRequest),
@@ -80,7 +75,8 @@ func (r *RrdServer) PutMetrics(ctx echo.Context) error {
 		return ctx.JSON(http.StatusBadRequest, bResp)
 	}
 
-	err = r.Driver.PutMetric(metricsData)
+	// store the given metric
+	err = r.AsDriver.PutMetric(metricsData)
 
 	// TODO replace http.StatusBadRequest with http.StatusInternalServerError
 	if err != nil {
@@ -99,12 +95,13 @@ func (r *RrdServer) PutMetrics(ctx echo.Context) error {
 	}
 
 	r.logger.Debug(fmt.Sprintf("metrics data object processed: %v", metricsData))
+
 	return ctx.JSON(http.StatusOK, resp)
 }
 
 func (r *RrdServer) Run() {
 
-	r.Driver.Run()
+	r.AsDriver.Run()
 
 	err := r.echoServer.Start(fmt.Sprintf("%s:%d", r.host, r.port))
 	if err != nil {
@@ -113,9 +110,15 @@ func (r *RrdServer) Run() {
 }
 
 func (r *RrdServer) Stop() {
-	r.Driver.Stop()
 
-	err := r.echoServer.Shutdown(context.Background())
+	r.AsDriver.Stop()
+
+	ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
+	defer cancel()
+
+	// TODO: check how we can avoid FATAL msg on shutdown
+	// {"level":"FATAL","time":"2024-06-22T08:41:49.055+0300","message":"http: Server closed"}
+	err := r.echoServer.Shutdown(ctx)
 	if err != nil {
 		r.logger.Error(err)
 	}
@@ -124,7 +127,7 @@ func (r *RrdServer) Stop() {
 func NewRrdServer(config *viper.Viper, logger logger.ILogger, driver *cache.AerospikeDriver) *RrdServer {
 	res := &RrdServer{
 		logger:     logger,
-		Driver:     driver,
+		AsDriver:   driver,
 		port:       config.GetInt("RRD_SERVER_PORT"),
 		host:       config.GetString("RRD_SERVER_HOST"),
 		echoServer: echo.New(),
